# german-articles-correction

./: .gitignore  README.md  backup_pyproject  backup_pyproject.toml  pyproject.toml
pretrained_model/: old_training_stats_multiple_masks.csv  training_stats_multiple_masks.csv  training_stats_multiple_masks_partially_wrong.csv  training_stats_multiple_masks_partially_wrong_all_articles.csv  training_stats_single_mask.csv
src/german_grammar_checker/: 01_generate_mlm_training_data.py  01_preprocess_data.py  02_evaluate_mlm_model.py  03_generate_training_data.py  03_train_grammar_checker_model.py  03_train_grammar_correction_model.py  04_eval_grammar_correction_model.py  04_evaluate_grammar_checker_model.py  04_train_grammar_checker_model.py  05_evaluate_grammar_checker_model.py  data_preparation.py  evaluate.py  generate_training_labels.py  load_raw_data.py  main.py  model_preparation.py  preprocessor.py  train.py  understanding_nn_crossentropy_loss.py
src/german_grammar_checker/grammar_correction/: data_preparation.py  helper_functions.py  model_preparation.py
src/german_grammar_correction/: 01_preprocess_data.py  03_train_gc_model.py  03_train_grammar_correction_model.py  04_eval_gc_model.py  04_eval_grammar_correction_model.py  05_add_features.py  06_train_all_art.py  07_create_plots.py  08_eval_all_art.py
src/german_grammar_correction/grammar_correction/: data_preparation.py  data_preparation_all_articles.py  model_preparation_all_articles.py
