[tool.poetry]
name = "german-grammar-checker"
version = "0.1.0"
description = ""
authors = ["Lisandro Cesaratto <lisandrocesaratto95@gmail.com>"]
readme = "README.md"
packages = [{include = "german_grammar_checker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
wiki-dump-parser = "^2.0.2"
pandas = "^1.4.4"
poethepoet = "^0.16.2"
transformers = "^4.21.3"
datasets = "^2.4.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
