[tool.poetry]
name = "german_grammar_correction"
version = "0.1.0"
description = ""
authors = ["Lisandro Cesaratto <lisandrocesaratto95@gmail.com>"]
readme = "README.md"
packages = [{include = "german_grammar_correction", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
wiki-dump-parser = "^2.0.2"
pandas = "^1.4.4"
transformers = "^4.21.3"
datasets = "^2.4.0"
spacy = {extras = ["cuda112"], version = "^3.4.1"}
de_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.4.0/de_core_news_lg-3.4.0-py3-none-any.whl"}
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
